crates/agglayer-node/src/rpc/tests/snapshots/agglayer_node__rpc__tests__errors__cert_height_range.snap
---
source: crates/agglayer-node/src/rpc/tests/errors.rs
expression: "SendCertificate { detail: \"Certificate height (55) outside of acceptable range (57..=67)\" }"
snapshot_kind: text
---
{
  "code": -10006,
  "data": {
    "send-certificate": {
      "detail": "Certificate height (55) outside of acceptable range (57..=67)"
    }
  },
  "message": "Cannot send certificate"
}
