crates/agglayer-node/src/rpc/tests/snapshots/agglayer_node__rpc__tests__errors__cert_replace_candidate.snap
---
source: crates/agglayer-node/src/rpc/tests/errors.rs
assertion_line: 144
expression: "SendCertificate { detail: \"Cannot replace an existing Candidate certificate\" }"
snapshot_kind: text
---
{
  "code": -10006,
  "data": {
    "send-certificate": {
      "detail": "Cannot replace an existing Candidate certificate"
    }
  },
  "message": "Cannot send certificate"
}
