crates/agglayer-node/src/rpc/tests/snapshots/agglayer_node__rpc__tests__errors__rate_disallowed.snap
---
source: crates/agglayer-node/src/rpc/tests/errors.rs
expression: "RateLimited { detail: \"The `sendTx` settlement disabled by rate limiter\", error: SendTxDiabled }"
---
{
  "code": -10007,
  "data": {
    "rate-limited": {
      "detail": "The `sendTx` settlement disabled by rate limiter",
      "error": {
        "send-tx-diabled": {}
      }
    }
  },
  "message": "Rate limited"
}
