crates/agglayer-node/src/rpc/tests/snapshots/agglayer_node__rpc__tests__errors__rate_sendtx_limited.snap
---
source: crates/agglayer-node/src/rpc/tests/errors.rs
expression: "RateLimited { detail: \"The `sendTx` settlement has been limited: Limit reached\", error: SendTxRateLimited(RateLimited { max_per_interval: 3, time_interval: 1800s, until_next: Some(123s) }) }"
---
{
  "code": -10007,
  "data": {
    "rate-limited": {
      "detail": "The `sendTx` settlement has been limited: Limit reached",
      "error": {
        "send-tx-rate-limited": {
          "max-per-interval": 3,
          "time-interval": 1800,
          "until-next": 123
        }
      }
    }
  },
  "message": "Rate limited"
}
